[ADDED] new color setting panel
Former-commit-id: 8ae0f9148e86de29f2645e8cfb2759cf6ec30530

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1957,6 +1957,42 @@
 				Name="dialog"
 				>
 				<File
+					RelativePath="..\..\..\src\drag2d\widgets\ColorSlider.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\widgets\ColorSlider.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\widgets\GraduatedColorPanel.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\widgets\GraduatedColorPanel.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\widgets\HSLColorSettingDlg.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\widgets\HSLColorSettingDlg.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\widgets\IColorMonitor.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\widgets\RGBColorSettingDlg.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\widgets\RGBColorSettingDlg.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\widgets\SetValueDialog.cpp"
 					>
 				</File>
