--- a/.gitignore
+++ b/.gitignore
@@ -138,6 +138,8 @@ easymap/platform/msvc2008/easymap
 easymap/platform/msvc2008/libmap
 easytexture/platform/msvc2008/easytexture
 easytexture/platform/msvc2008/libtexture
+easygui/platform/msvc2008/libeasygui
+easygui/platform/msvc2008/testeasygui
 
 easy3d/platform/msvc2008/easy3d
 easyphysics/platform/msvc2008/easyphysics
