[ADDED] load and store for pseudo3d
Former-commit-id: a63de619c4127e3ed8202a627ccdaa5fa1ad413f

--- a/easyimage/platform/msvc2008/projects/libimage.vcproj
+++ b/easyimage/platform/msvc2008/projects/libimage.vcproj
@@ -301,6 +301,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\libimage\ImageRevertY.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libimage\ImageRevertY.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libimage\ImageTrim.cpp"
 				>
 			</File>
