[ADDED]  proj2dscene
Former-commit-id: e35aa3edf1e66a2c56e81c050bf2defde95bfa47

--- a/easypseudo3d/platform/msvc2008/projects/libpseudo3d.vcproj
+++ b/easypseudo3d/platform/msvc2008/projects/libpseudo3d.vcproj
@@ -172,11 +172,19 @@
 				Name="stage"
 				>
 				<File
-					RelativePath="..\..\..\src\libpseudo3d\StageCanvas.cpp"
+					RelativePath="..\..\..\src\libpseudo3d\StageCanvas2D.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\libpseudo3d\StageCanvas.h"
+					RelativePath="..\..\..\src\libpseudo3d\StageCanvas2D.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libpseudo3d\StageCanvas3D.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libpseudo3d\StageCanvas3D.h"
 					>
 				</File>
 			</Filter>
@@ -206,6 +214,14 @@
 			</File>
 			<File
 				RelativePath="..\..\..\src\libpseudo3d\Projection2DScene.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libpseudo3d\Projection3DScene.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libpseudo3d\Projection3DScene.h"
 				>
 			</File>
 		</Filter>
