[ADDED] proj2d scene to epseudo3d
Former-commit-id: 5bf9ade03d8bbe4e4b914e354146ff161825cc1e

--- a/easypseudo3d/platform/msvc2008/projects/libpseudo3d.vcproj
+++ b/easypseudo3d/platform/msvc2008/projects/libpseudo3d.vcproj
@@ -209,6 +209,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\libpseudo3d\Proj2DEditOP.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libpseudo3d\Proj2DEditOP.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libpseudo3d\Projection2DScene.cpp"
 				>
 			</File>
