[ADDED] block compress
Former-commit-id: a1d0bb3e79c4436798c94fd1d3d9c9e388523ae6

--- a/easyimage/platform/msvc2008/projects/libimage.vcproj
+++ b/easyimage/platform/msvc2008/projects/libimage.vcproj
@@ -365,6 +365,18 @@
 				</File>
 			</Filter>
 		</Filter>
+		<Filter
+			Name="compress"
+			>
+			<File
+				RelativePath="..\..\..\src\libimage\BlockCompress.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libimage\BlockCompress.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\..\src\libimage\config.h"
 			>
