--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -469,6 +469,18 @@
 						>
 					</File>
 				</Filter>
+				<Filter
+					Name="compress"
+					>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\BlockCompress.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\BlockCompress.h"
+						>
+					</File>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="json"
