[ADDED] library的文件拖拽
Former-commit-id: 657965741c2be4d2aabc63338748ccfd2ecd0ec4

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1533,14 +1533,6 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\drag2d\view\LibraryDropTarget.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\drag2d\view\LibraryDropTarget.h"
-					>
-				</File>
-				<File
 					RelativePath="..\..\..\src\drag2d\view\LibraryList.cpp"
 					>
 				</File>
@@ -1617,6 +1609,26 @@
 					</File>
 					<File
 						RelativePath="..\..\..\src\drag2d\view\LibraryScriptsPage.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="drop"
+					>
+					<File
+						RelativePath="..\..\..\src\drag2d\view\LibraryPageDropTarget.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\drag2d\view\LibraryPageDropTarget.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\drag2d\view\LibraryPanelDropTarget.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\drag2d\view\LibraryPanelDropTarget.h"
 						>
 					</File>
 				</Filter>
