[ADDED] 拖拽文件，同时插入stage
Former-commit-id: 24b11b08e1d4f874c51d0a67f10f887dee8ce749

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1612,26 +1612,6 @@
 						>
 					</File>
 				</Filter>
-				<Filter
-					Name="drop"
-					>
-					<File
-						RelativePath="..\..\..\src\drag2d\view\LibraryPageDropTarget.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\..\src\drag2d\view\LibraryPageDropTarget.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\..\src\drag2d\view\LibraryPanelDropTarget.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\..\src\drag2d\view\LibraryPanelDropTarget.h"
-						>
-					</File>
-				</Filter>
 			</Filter>
 			<Filter
 				Name="property"
@@ -1722,14 +1702,6 @@
 				</File>
 				<File
 					RelativePath="..\..\..\src\drag2d\view\HistoryList.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\drag2d\view\StageDropTarget.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\drag2d\view\StageDropTarget.h"
 					>
 				</File>
 				<File
@@ -1966,6 +1938,42 @@
 				</File>
 				<File
 					RelativePath="..\..\..\src\drag2d\view\SettingsDialog.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="drop"
+				>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\FrameDropTarget.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\FrameDropTarget.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\LibraryPageDropTarget.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\LibraryPageDropTarget.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\LibraryPanelDropTarget.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\LibraryPanelDropTarget.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\StageDropTarget.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\StageDropTarget.h"
 					>
 				</File>
 			</Filter>
