[ADDED] stage drop file for easyimage
Former-commit-id: 9e083c1830acf9c4635ff768ea50dbffd8395ec3

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1945,6 +1945,22 @@
 				Name="drop"
 				>
 				<File
+					RelativePath="..\..\..\src\drag2d\view\CombinedDropData.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\CombinedDropData.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\CombinedDropTarget.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\CombinedDropTarget.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\view\FrameDropTarget.cpp"
 					>
 				</File>
