[ADDED] complex里存scale9信息(half)
Former-commit-id: 550601e0a7f95616ed3043252fbf2230d5447aaa

--- a/easyscale9/platform/msvc2008/projects/libscale9.vcproj
+++ b/easyscale9/platform/msvc2008/projects/libscale9.vcproj
@@ -217,6 +217,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\libscale9\Scale9Data.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libscale9\Scale9Data.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libscale9\Sprite.cpp"
 				>
 			</File>
@@ -251,6 +259,14 @@
 			<Filter
 				Name="property"
 				>
+				<File
+					RelativePath="..\..\..\src\libscale9\SpritePropertySetting.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libscale9\SpritePropertySetting.h"
+					>
+				</File>
 				<File
 					RelativePath="..\..\..\src\libscale9\SymbolPropertySetting.cpp"
 					>
