[ADDED] easymap中双击打开shape
Former-commit-id: 39897cad2e8d8140dfc725f2da8fabd86bf11178

--- a/easyshape/platform/msvc2008/projects/libshape.vcproj
+++ b/easyshape/platform/msvc2008/projects/libshape.vcproj
@@ -369,11 +369,11 @@
 			Name="frame"
 			>
 			<File
-				RelativePath="..\..\..\src\libshape\MainDialog.h"
+				RelativePath="..\..\..\src\libshape\EditDialog.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\libshape\MainDialog.inl"
+				RelativePath="..\..\..\src\libshape\EditDialog.h"
 				>
 			</File>
 		</Filter>
