[ADDED] easymap调节参照框大小
Former-commit-id: 44bd8d782608f91ae5722dfc232e5447f78a2e0f

--- a/easymap/platform/msvc2008/projects/easymap.vcproj
+++ b/easymap/platform/msvc2008/projects/easymap.vcproj
@@ -183,11 +183,27 @@
 	</References>
 	<Files>
 		<File
+			RelativePath="..\..\..\src\easymap\Frame.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\easymap\Frame.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\easymap\main.cpp"
 			>
 		</File>
 		<File
 			RelativePath="..\..\..\src\easymap\main.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\easymap\SettingsDialog.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\easymap\SettingsDialog.h"
 			>
 		</File>
 		<File
