--- a/lr/platform/msvc2008/projects/lr.vcproj
+++ b/lr/platform/msvc2008/projects/lr.vcproj
@@ -190,6 +190,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\lr\frame\FileIO.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\lr\frame\FileIO.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\lr\frame\Frame.cpp"
 				>
 			</File>
