[FIXED] easyanim preview draw
Former-commit-id: 9e849cb245ca8acabc4eab850b575280bc5f4639

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1409,6 +1409,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\common\PlayControl.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\common\PlayControl.h"
 					>
 				</File>
