[ADDED] navmash pathfinding
Former-commit-id: 6ab96fd91b543ad0a21b0c325b0ab2bb16242a94

--- a/lr/platform/msvc2008/projects/lr.vcproj
+++ b/lr/platform/msvc2008/projects/lr.vcproj
@@ -369,6 +369,18 @@
 				Name="pathfinding"
 				>
 				<File
+					RelativePath="..\..\..\src\lr\preview\IPathfinding.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\lr\preview\PathfindingNavMesh.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\lr\preview\PathfindingNavMesh.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\lr\preview\PathfindingSimple.cpp"
 					>
 				</File>
