[ADDED] library的数据输入输出
Former-commit-id: 723cdb0668e7ea1befa35631df064d27ccf308da

--- a/lr/platform/msvc2008/projects/lr.vcproj
+++ b/lr/platform/msvc2008/projects/lr.vcproj
@@ -272,6 +272,14 @@
 					RelativePath="..\..\..\src\lr\view\LibraryPage.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\lr\view\LibraryPanel.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\lr\view\LibraryPanel.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="editop"
