--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -2206,6 +2206,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\drag2d\algorithms\TrapezoidalDec.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\drag2d\algorithms\TrapezoidalDec.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\drag2d\algorithms\Triangulation.cpp"
 				>
 				<FileConfiguration
